# imageCaputeFromCam

./: capture.py  main.py  pyproject.toml
